# auto-subtitle-viewer

./: .env.example  .gitignore  README.md  build_frontend.bat  main.py  project_roadmap.md  pyproject.toml  requirements-cuda.txt  requirements.txt  run_app.bat  setup.bat
frontend/: .gitignore  index.html
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ErrorAlert.tsx  ProgressStepper.tsx  StatusBanner.tsx  SubtitleOverlay.tsx  SubtitlePanel.tsx  SubtitleSettings.tsx  UploadZone.tsx  VideoPlayer.tsx
frontend/src/utils/: subtitleStyle.ts  subtitles.ts
src/auto_subtitle/: __init__.py  __main__.py  cli.py  config.py  core.py  pipeline.py
src/auto_subtitle/api/: __init__.py  app.py  routes.py  schemas.py
src/auto_subtitle/subtitle/: __init__.py  models.py  writers.py
src/auto_subtitle/transcription/: __init__.py  whisper_transcriber.py
src/auto_subtitle/translation/: __init__.py  llm_translator.py
src/auto_subtitle/video/: hardsub.py
